# upbit-mcp-server

./: .gitignore  Dockerfile  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt  smithery.yaml
prompts/: analyze_portfolio.py  explain_ticker.py  order_help.py  trading_strategy.py
resources/: __init__.py  get_market_list.py
tools/: cancel_order.py  create_order.py  create_withraw.py  get_accounts.py  get_candels.py  get_deposits_withdrawals.py  get_market_summary.py  get_order.py  get_orderbook.py  get_orders.py  get_ticker.py  get_trades.py  technical_analysis.py
